--- a/app/src/main/res/layout/tela_principal.xml
+++ b/app/src/main/res/layout/tela_principal.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.posmobile.caixaappandroid.TelaPrincipal">
+    android:fitsSystemWindows="true"
+    tools:context="com.posmobile.caixaappandroid.activity.TelaPrincipal">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -65,225 +66,14 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ScrollView
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager_principal"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:fillViewport="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/navigation"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp">
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/card_saldo"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="3dp"
-                    app:cardPreventCornerOverlap="false"
-                    app:cardUseCompatPadding="false">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <android.support.constraint.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:id="@+id/label_saldo"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                android:layout_margin="10dp"
-                                android:text="Saldo em conta Corrente"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/label_exp_saldo"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintLeft_toRightOf="@+id/label_saldo"
-                                app:layout_constraintRight_toLeftOf="@id/ic_exp_saldo"
-                                app:layout_constraintHorizontal_bias="1"
-                                android:text="expandir"
-                                android:textStyle="italic"/>
-                            <ImageView
-                                android:id="@+id/ic_exp_saldo"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"
-                                android:tint="@android:color/darker_gray"
-                                app:layout_constraintHorizontal_bias="0.8"
-                                app:srcCompat="@drawable/ic_chevron_down"/>
-
-                        </android.support.constraint.ConstraintLayout>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:text="Ver Extrato"/>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/card_cartao"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/card_saldo"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="3dp"
-                    app:cardPreventCornerOverlap="false"
-                    app:cardUseCompatPadding="false">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <android.support.constraint.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:id="@+id/img_cartao"
-                                android:layout_width="96dp"
-                                android:layout_height="96dp"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                android:layout_margin="10dp"
-                                app:srcCompat="@drawable/ic_mastercard_logo"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/label_exp_cartao"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintLeft_toRightOf="@+id/img_cartao"
-                                app:layout_constraintRight_toLeftOf="@id/ic_exp_cartao"
-                                app:layout_constraintHorizontal_bias="1"
-                                app:layout_constraintVertical_bias="0.05"
-                                android:text="expandir"
-                                android:textStyle="italic"/>
-                            <ImageView
-                                android:id="@+id/ic_exp_cartao"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"
-                                android:tint="@android:color/darker_gray"
-                                app:layout_constraintHorizontal_bias="0.8"
-                                app:layout_constraintVertical_bias="0"
-                                app:srcCompat="@drawable/ic_chevron_down"/>
-
-                        </android.support.constraint.ConstraintLayout>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:text="Ver Extrato"/>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/card_investimentos"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/card_cartao"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_margin="10dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="3dp"
-                    app:cardPreventCornerOverlap="false"
-                    app:cardUseCompatPadding="false">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <android.support.constraint.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:id="@+id/label_investimento"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                android:layout_margin="10dp"
-                                android:text="Investimentos"
-                                android:textStyle="bold"/>
-
-                            <TextView
-                                android:id="@+id/label_exp_investimento"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintLeft_toRightOf="@+id/label_investimento"
-                                app:layout_constraintRight_toLeftOf="@id/ic_exp_investimento"
-                                app:layout_constraintHorizontal_bias="1"
-                                android:text="expandir"
-                                android:textStyle="italic"/>
-                            <ImageView
-                                android:id="@+id/ic_exp_investimento"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"
-                                android:tint="@android:color/darker_gray"
-                                app:layout_constraintHorizontal_bias="0.8"
-                                app:srcCompat="@drawable/ic_chevron_down"/>
-
-                        </android.support.constraint.ConstraintLayout>
-
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:text="Ver Detalhes"/>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-            </android.support.constraint.ConstraintLayout>
-
-        </ScrollView>
+            app:layout_constraintRight_toRightOf="parent" />
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
