--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,16 +4,26 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home"
-        android:title="@string/title_home" />
+        android:title="@string/title_inicio" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_extrato"
+        android:icon="@drawable/ic_document"
+        android:title="@string/title_extrato" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_transacoes"
+        android:icon="@drawable/ic_transacao"
+        android:title="@string/title_transacoes" />
+
+    <item
+        android:id="@+id/navigation_servicos"
+        android:icon="@drawable/ic_services"
+        android:title="@string/title_servicos" />
+
+    <item
+        android:id="@+id/navigation_ajuda"
+        android:icon="@drawable/ic_help"
+        android:title="@string/title_ajuda" />
 
 </menu>
